test/src/e2e_vm_tests/test_programs/should_pass/midenvm/midenvm_trivial/src/main.sw
script;

fn main() -> u64 { 42 }
