test/src/e2e_vm_tests/test_programs/should_fail/match_expressions_empty_arms/src/main.sw
script;

enum Foo {
}

fn main(foo: Foo) -> u64 {
    match foo {
    }
    42
}
